# abcd-feature-editor

./: AGENTS.md  README.md  TASKS.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  requirements.txt
backend/app/: README.md  main.py  pyproject.toml
backend/app/api/: router.py
backend/app/api/endpoints/: ai_editor_agent_routes.py
backend/app/config/: config.json
backend/app/core/: config.py  env_validation.py  logging_config.py
backend/app/data/: sessions.db
backend/app/models/: edit_models.py  request_models.py
backend/app/multi_tool_agent/: __init__.py  add_text.py  agent.py  cleanup.py  edit_queue_tools.py  generate_speech_tool  generate_speech_tool.py  session_data.py
backend/app/multi_tool_agent_test/: agent.py  testAddText.py
backend/app/services/: config_service.py  database_session_service.py  gcs_artifact_service.py  text_to_speech_service.py  video_editing_service.py  video_export_service.py  video_pipeline_service.py
backend/app/services/bigquery/: bigquery_service.py
backend/app/tests/: test_agent.py  test_endpoints.py  test_text_to_speech_service.py  test_video_editing_service.py
frontend/: .gitignore  App.tsx  README.md  index.css  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
frontend/components/: ChatInput.tsx  ChatWindow.tsx  EditQueue.tsx  FeaturesTable.tsx  Message.tsx  RecommendationWorkflow.tsx  ResponsiveVideoPlayer.tsx  SessionList.tsx  VersionHistory.tsx
frontend/services/: geminiService.ts  sessionService.ts
frontend/tests/: ChatInput.test.tsx  Message.test.tsx  (+1 more)
(+10 files in other folders)
